--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="ico" type="image/x-icon" href="favicon.ico">
-    <title>Document</title>
+    <title>index file</title>
 </head>
 <frameset rows="15%,75%,*">
     <frame name="header" src="header.html"></frame>
