--- a/HTML/login.html
+++ b/HTML/login.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body bgcolor="pink">
-    <form name="login" method="post" action="/login">
+<body bgcolor="#5483b3">
+    <form name="login" method="post" action="/login" style="color: beige;">
     <table>
         <caption>
             <h1>Login Page</h1>
